[Zyto] fix layout issues for result_report preview in case view.
Conflicts:

	app/views/cases/_result_report.html.haml

--- a/app/assets/stylesheets/result_report.css
+++ b/app/assets/stylesheets/result_report.css
@@ -2,7 +2,6 @@
   background-color: white;
   width: 14.8cm;
   height: 21cm;
-  box-shadow: 10px 10px 8px #707070;
 }
 
 .report {
